<resources>
    <string name="app_name">SSIP</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_connect_with">Or Connect with</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_the_email_you_are_registered">Please enter the email you are registered.</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="enter_you_email">Enter you Email</string>

</resources>
